# raytracer

./: justfile  pyproject.toml
images/: sphere_on_ground_antialiased_10.ppm  sphere_on_ground_antialiased_100.ppm
raytracer/: __init__.py  camera.py  color.py  hittable.py  hittable_list.py  interval.py  main.py  ray.py  sphere.py  vec3.py
